--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,11 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Titan One', cursive;
 }
 
 html, body {
   height: 100%;
+}
+
+body {
+  background-color: black;
 }
 
 .App {
@@ -25,8 +30,8 @@ html, body {
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: grey;
+  min-height: 200vh;
   display: flex;
   flex-direction: column;
   align-items: center;
