--- a/frontend/src/components/HomeNotLoggedIn.scss
+++ b/frontend/src/components/HomeNotLoggedIn.scss
@@ -10,15 +10,18 @@
 }
 
 #app-name {
-  font-family: 'Montserrat', sans-serif;
+  // font-family: 'Montserrat', sans-serif;
+  font-family: 'Titan One', cursive;
   letter-spacing: 0px;
   font-weight: 600;
 }
 
 .slogan {
   color: grey;
-  font-family: 'Montserrat', sans-serif;
+  // font-family: 'Montserrat', sans-serif;
+  font-family: 'Titan One', cursive;
 }
+
 
 .trails-main {
   position: relative;
@@ -36,9 +39,9 @@
   position: relative;
   width: 100%;
   height: 120%;
-  line-height: 95%;
+  line-height: 100px;
   color: black;
-  font-size: 8em;
+  font-size: 6em;
   font-weight: 800;
   letter-spacing: -5px;
   will-change: transform, opacity;
