--- a/frontend/src/components/RequestCard.scss
+++ b/frontend/src/components/RequestCard.scss
@@ -32,6 +32,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin: 25px;
     border-radius: 1em;
     box-shadow: 0 5px 15px 0 rgba(0,0,0, .25);
     max-width: 800px;
